# berkeley-marl

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
berkeley_marl/: __init__.py
berkeley_marl/agents/: __init__.py  dqn.py  random_policy.py
berkeley_marl/envs/: __init__.py  berkeley_forest.py
berkeley_marl/utils/: logging.py  seeding.py
demo/: Dockerfile  README.md  app.py
demo/static/: app.js  index.html  styles.css
experiments/: eval.py  plot.py  train.py
paper/: README.md
results/: berkeley_seed42.csv
tests/: test_env.py
