[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "berkeley-marl"
version = "0.1.0"
description = "A Berkeleyan multi-agent reinforcement learning experiment."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "TODO: Author Name"}]
dependencies = [
  "numpy>=1.26",
  "matplotlib>=3.8",
  "torch>=2.2",
]

[tool.setuptools.packages.find]
include = ["berkeley_marl*"]
